== 1.3.2

    Enhancements, changes:
    ----------------------------
    + url_rewrite has changed, please use new rewrite scheme (https://phpipam.net/news/new_rewrite_scheme/);
    + Search for matching subnet in all VRFs feature enabled when importing addresses.

    Translations:
    ----------------------------
    + German translation updated to verson 1.3.1;

    Bugfixes:
    ----------------------------
    + Fixed uncaught error if vlan number exceeds max permitted (#1455);
    + Fixed Illegal string offset 'dns_name' in pingCheck.php errors (#1461);
    + Performance fix for subnet_dropdown_print_available (#1562);
    + Fixed logo updater for apache v2.4 (#1582);
    + Fixed section names containing spaces are not included in exports (#1566);

== 1.3.1

    New features:
    ------------
    + Circuits module (circuits, providers, map, ...) (#731);

    Enhancements, changes:
    ----------------------------
    + Racks:
        + Automatic location assignment when device added to rack (#1230);
        + Rack map showing map of all racks in location;
        + Rack back side;
    + Compact menu layout (per-user setting, showing only icons);
    + Network to network static nat;
    + Selectable logo size (from config.php) (#952);
    + Added default option for permissions propagations (#1351);
    + API:
        + Added Circuits controller;
        + Encrypyted requests can now also be form-encoded (#1191);
        + Introduce mcrypt AES compatibility (#1516);
        + Fixed field ip not displayed when filters applied (#1529);
    + New resolve hostnames option for subnet (#1222):
        + Updates hostnames via pingCheck.php script (if parameter set for subnet);
        + Updates hostnames via resolveIPaddresses.php script (if parameter set for subnet);
        + On-the-fly empty hostname update if resolved (if parameter set for subnet and enabled globally);
        + Added this infor to tools > scanned networks;