@@ -43,6 +43,40 @@ if(isset($_POST['action-visual'])) {
 # save $_POST to $address
 $address = $_POST;
 
+
+// set selected address and required addresses fields array
+$selected_ip_fields = explode(";", $User->settings->IPfilter);
+$required_ip_fields = explode(";", $User->settings->IPrequired);
+// append one missing from selected
+$selected_ip_fields[] = "description";
+$selected_ip_fields[] = "dns_name";
+// if field is present in required fields but not in selected remove it !
+foreach ($required_ip_fields as $k=>$f) {
+	if (!in_array($f, $selected_ip_fields)) {
+		unset ($required_ip_fields[$k]);
+	}
+}
+// checks
+if(is_array($required_ip_fields)) {
+	// remove modules not enabled from required fields
+	if($User->settings->enableLocations=="0") { unset($required_ip_fields['location_item']); }
+
+	// set default array
+	$required_field_errors = [];
+	// Check that all required fields are present
+	foreach ($required_ip_fields as $required_field) {
+		if (!isset($address[$required_field]) || strlen($address[$required_field])==0) {
+			$required_field_errors[] = ucwords($required_field)." "._("is required");
+		}
+	}
+	// check
+	if(sizeof($required_field_errors)>0) {
+		array_unshift($required_field_errors, "Please fix following errors:");
+		$Result->show("danger", implode("<br> - ", $required_field_errors), true);
+	}
+}
+
+
 # remove all spaces in dns_name
 if (strlen($address['dns_name'])>0) { $address['dns_name'] = str_replace(" ", "", $address['dns_name']); }
 
