@@ -2717,21 +2717,6 @@ $(document).on("submit", "form#asImport", function() {
 });
 
 
-/*    set selected IP fields
-********************************/
-$('button#filterIPSave').click(function() {
-    showSpinner();
-    var addata = $('form#filterIP').serialize();
-    $.post('app/admin/filter-fields/filter-result.php', addata, function(data) {
-        $('div.filterIPResult').html(data).slideDown('fast');
-        //reload after 2 seconds if succeeded!
-        if(data.search("alert-danger")==-1 && data.search("error")==-1)     { $('div.filterIPResult').delay(2000).fadeOut('slow');    hideSpinner(); }
-        else                             { hideSpinner(); }
-    }).fail(function(jqxhr, textStatus, errorThrown) { showError(jqxhr.statusText + "<br>Status: " + textStatus + "<br>Error: "+errorThrown); });
-    return false;
-});
-
-
 
 
 /*    custom fields - general
